2004-12-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.6.0 ===
	
2004-12-15  Alexander Larsson  <alexl@redhat.com>

	* glib/gconvert.c: (g_filename_display_basename):
	Fix spelling
	Add g_return_val_if_fail.
	
	* glib/glib.symbols:
	Add g_filename_display_basename

2004-12-15  Alexander Larsson  <alexl@redhat.com>

	* glib/gconvert.[ch]:
	Add g_filename_display_basename.

2004-12-14  Matthias Clasen  <mclasen@redhat.com>

	* README.in: Updates

	* NEWS: Updates.

	* configure.in: Set version to 2.6.0

2004-12-13  Tor Lillqvist  <tml@iki.fi>

	* NEWS: Update.

	* glib/glib.symbols
	* glib/gstdio.[ch]: Add g_rmdir().

2004-12-13  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2004-12-12  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.symbols
	* glib/gconvert.[ch]: Implement Windows DLL ABI stability also for
	g_filename_{to,from}_uri().

2004-12-11  Tor Lillqvist  <tml@iki.fi>

	* glib/gstdio.c (g_rename, g_unlink, g_remove): Add doc comments
	about Windows restrictions on renaming and removing.

	(g_remove): Mimic POSIX remove() on Windows: Try also to rmdir if
	removal as a file fails. Document this.

	* glib/gstdio.h: Clarify comment about file name encoding on
	Windows.

	* glib/gspawn-win32.c: Fix #157255. Also some refactoring of this
	still very ugly source file.

2004-12-09  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c (print_help): Don't print help options
	if the options of a specific group have been 
	requested.  (#160645, Glynn Foster)

2004-12-07  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.c (g_get_language_names): Update the returned
	value after locale changes.  (#160271, Christian Persch)
	(_g_utils_thread_init): Initialize the language name cache
	before going threaded.

	* glib/gthread.c (g_thread_init_glib): Call _g_utils_thread_init().

	* glib/gthreadinit.h: Add _g_utils_thread_init().

2004-12-06  Tor Lillqvist  <tml@iki.fi>
